fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/Survey_Procedure_Lab__c.object-meta.xml
<CustomObject>
    <label>Survey - Procedure Lab</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Survey - Procedure Lab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey - Procedure Lab</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>