fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/Do_you_have_any_additional_comments__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_additional_comments__c</fullName>
    <label>Do you have any additional comments?</label>
    <type>TextArea</type>
</CustomField>