fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/How_likely_that_you_will_recommend__c.field-meta.xml
<CustomField>
    <fullName>How_likely_that_you_will_recommend__c</fullName>
    <label>How likely that you will recommend?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>