fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/How_many_times_per_month_have_you_placed__c.field-meta.xml
<CustomField>
    <fullName>How_many_times_per_month_have_you_placed__c</fullName>
    <label>How many times per month have you placed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>