fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/Increased_confidence_with_risk_avoicedan__c.field-meta.xml
<CustomField>
    <fullName>Increased_confidence_with_risk_avoicedan__c</fullName>
    <label>Increased confidence with risk avoicedan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>