fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/Indicate_your_confidence_with_the_use_of__c.field-meta.xml
<CustomField>
    <fullName>Indicate_your_confidence_with_the_use_of__c</fullName>
    <label>Indicate your confidence with the use of</label>
    <length>50</length>
    <type>Text</type>
</CustomField>