fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Survey - Procedure Lab</relationshipLabel>
    <relationshipName>Survey_Procedure_Lab</relationshipName>
    <type>Lookup</type>
</CustomField>