fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/Other_need_not_listed_above__c.field-meta.xml
<CustomField>
    <fullName>Other_need_not_listed_above__c</fullName>
    <label>Other need not listed above</label>
    <type>TextArea</type>
</CustomField>