fullSandbox11072023/force-app/main/default/objects/Survey_Procedure_Lab__c/fields/What_is_your_preferred_site_for_insertio__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_preferred_site_for_insertio__c</fullName>
    <label>What is your preferred site for insertio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>